fixing margin for logo on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,20 @@ pre {
   .row {
     margin-left: 10px; }
   }
+
+  .row2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px; }
+  
+    @media (max-width: 992px) {
+      .row {
+        margin-left: 10px; }
+      }
   
 .no-gutters {
   margin-right: 0;
